# em_viz

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json
.cargo/: config.toml
crates/solver/: Cargo.toml
crates/solver/src/: lib.rs
src/: app.rs  camera.rs  em3d.rs  gl.rs  main.rs  main.ts  mathjax-init.ts  perf.rs  perf_gpu.rs  picking.rs  render.ts  seed.rs  solver.ts  state.rs  stream3d.rs  wgpu_renderer.rs
src/gl/: mod.rs
src/solver/: mod.rs
src/stream/: mod.rs
static/shaders/: bz.frag.glsl  line.frag.glsl  line.vert.glsl  quad.vert.glsl  ribbon.wgsl  ribbon3d.frag.glsl  ribbon3d.vert.glsl  ribbon_e_comp.wgsl  sphere.wgsl  sphere_impostor.frag.glsl  sphere_impostor.vert.glsl  viridis.frag.glsl
